Initial Logic Complite

--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -18,8 +18,8 @@
 
 
             <TextView
+                android:id="@+id/showQuestion"
                 android:layout_width="match_parent"
-                android:text="@string/cquestions"
                 android:layout_height="match_parent" />
 
         </LinearLayout>
